<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:orientation="vertical">

    <!-- ImageView para la imagen de la receta -->

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:layout_marginStart="0dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Nueva receta"
            android:textSize="20dp" />


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_arrow_left"
            android:background="@android:color/transparent"
            app:tint="@color/gray"
            android:layout_marginStart="16dp"
            android:contentDescription="Boton de atrás"/>

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_floppy_disk"
            android:background="@android:color/transparent"
            app:tint="@color/gray"
            android:contentDescription="Guardar la receta"/>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_gravity="bottom" />
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/contenedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <ImageButton
                android:id="@+id/imageViewRecipe"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/light_gray"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_camera"
                android:contentDescription="@string/descriptionImage" />

            <!-- EditText para el nombre de la receta -->
            <EditText
                android:id="@+id/editTextRecipeName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="time"
                android:backgroundTint="@color/gray"
                android:hint="@string/nombre_receta"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textSize="13dp" />


            <!-- EditText para la duración de la receta -->
            <EditText
                android:id="@+id/editTextDuration"
                android:layout_width="match_parent"
                android:hint="@string/duracion_minutos"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:backgroundTint="@color/gray"
                android:inputType="number"
                android:layout_marginBottom="16dp"
                android:autofillHints="creditCardNumber"
                android:textSize="13dp"
                />

            <!-- EditText para la descripción de la receta -->
            <Spinner
                android:id="@+id/spinnerDifficulty"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:padding="10dp"
                android:theme="@style/SpinnerTextStyle"
                android:entries="@array/difficulty_levels"
                android:prompt="@string/seleccionar_dificultad"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_border"

                />


            <EditText
                android:id="@+id/editTextCalories"
                android:layout_width="match_parent"
                android:hint="@string/calorias"
                android:layout_height="40dp"
                android:backgroundTint="@color/gray"
                android:paddingLeft="10dp"
                android:inputType="number"
                android:layout_marginBottom="16dp"
                android:autofillHints="creditCardNumber"
                android:textSize="13dp"
                />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="description"
                android:background="@drawable/edit_description_border"
                android:gravity="top"
                android:hint="@string/descripcion"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:textSize="13dp" />


            <LinearLayout
                android:id="@+id/linearlayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ingredientes"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:paddingBottom="5dp"
                    />
                <EditText
                    android:id="@+id/editTextIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="16dp"
                    android:padding="10dp"
                    android:autofillHints="Ingredients"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/ingrediente_agregar"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:textSize="13dp" />

                <Button
                    android:id="@+id/CrearTextView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_mas"
                    android:contentDescription="Descripcion"
                    />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearlayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pasos de preparación"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:paddingBottom="5dp"
                    />

                <EditText
                    android:id="@+id/editTextPasos"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:layout_marginBottom="16dp"
                    android:autofillHints="Ingredients"
                    android:background="@drawable/edit_text_border"
                    android:hint="Introduce el paso de preparación..."
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:textSize="13dp" />

                <Button
                    android:id="@+id/CrearText"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_mas"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>